:recycle: Update framework http second signature references
